--- a/src/Scheduler.Infrastructure.Dependencies/Scheduler.Infrastructure.Dependencies.csproj
+++ b/src/Scheduler.Infrastructure.Dependencies/Scheduler.Infrastructure.Dependencies.csproj
@@ -34,6 +34,7 @@
     <Compile Include="Configurations\DataServiceDependencyConfigurations.cs" />
     <Compile Include="Configurations\RepositoryDependencyConfigurations.cs" />
     <Compile Include="Configurations\ServiceDependencyConfigurations.cs" />
+    <Compile Include="DependencyManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
