--- a/src/Scheduler.Core/Scheduler.Core.csproj
+++ b/src/Scheduler.Core/Scheduler.Core.csproj
@@ -37,6 +37,7 @@
   <ItemGroup>
     <Compile Include="Attributes\KeyAttribute.cs" />
     <Compile Include="Configurations\ApplicationConfiguration.cs" />
+    <Compile Include="Configurations\IApplicationConfiguration.cs" />
     <Compile Include="Configurations\IEngineConfiguration.cs" />
     <Compile Include="Constants.cs" />
     <Compile Include="Context\DataWarehouseContext.cs" />
