--- a/src/Scheduler.Domain.Data/Scheduler.Domain.Data.csproj
+++ b/src/Scheduler.Domain.Data/Scheduler.Domain.Data.csproj
@@ -36,17 +36,17 @@
   <ItemGroup>
     <Compile Include="BusinessEntities\JobDetail.cs" />
     <Compile Include="BusinessEntities\JobStatus.cs" />
-    <Compile Include="BusinessEntities\SchedulerInstance.cs" />
-    <Compile Include="BusinessEntities\SchedulerInstanceSetting.cs" />
+    <Compile Include="BusinessEntities\Instance.cs" />
+    <Compile Include="BusinessEntities\Setting.cs" />
     <Compile Include="Dto\InstanceSettings.cs" />
     <Compile Include="Dto\JobDetail.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\IJobDetailRepository.cs" />
     <Compile Include="Repositories\IRepository.cs" />
-    <Compile Include="Repositories\ISchedulerInstanceRepository.cs" />
-    <Compile Include="Repositories\ISchedulerInstanceSettingRepository.cs" />
+    <Compile Include="Repositories\IInstanceRepository.cs" />
+    <Compile Include="Repositories\ISettingRepository.cs" />
     <Compile Include="Services\IJobDetailService.cs" />
-    <Compile Include="Services\ISchedulerSettingsService.cs" />
+    <Compile Include="Services\ISettingsService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
