--- a/src/Scheduler.Infrastructure.Data/Scheduler.Infrastructure.Data.csproj
+++ b/src/Scheduler.Infrastructure.Data/Scheduler.Infrastructure.Data.csproj
@@ -32,7 +32,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Services\JobDetailService.cs" />
-    <Compile Include="Services\SchedulerSettingsService.cs" />
+    <Compile Include="Services\SettingsService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
