--- a/src/Scheduler.Console/Scheduler.Console.csproj
+++ b/src/Scheduler.Console/Scheduler.Console.csproj
@@ -33,35 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Common.Logging, Version=3.3.1.0, Culture=neutral, PublicKeyToken=af08829b84f0328e, processorArchitecture=MSIL">
-      <HintPath>..\packages\Common.Logging.3.3.1\lib\net40\Common.Logging.dll</HintPath>
-    </Reference>
-    <Reference Include="Common.Logging.Core, Version=3.3.1.0, Culture=neutral, PublicKeyToken=af08829b84f0328e, processorArchitecture=MSIL">
-      <HintPath>..\packages\Common.Logging.Core.3.3.1\lib\net40\Common.Logging.Core.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.Practices.ServiceLocation, Version=1.3.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\CommonServiceLocator.1.3\lib\portable-net4+sl5+netcore45+wpa81+wp8\Microsoft.Practices.ServiceLocation.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.Practices.Unity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=6d32ff45e0ccc69f, processorArchitecture=MSIL">
-      <HintPath>..\packages\Unity.4.0.1\lib\net45\Microsoft.Practices.Unity.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.Practices.Unity.Configuration, Version=4.0.0.0, Culture=neutral, PublicKeyToken=6d32ff45e0ccc69f, processorArchitecture=MSIL">
-      <HintPath>..\packages\Unity.4.0.1\lib\net45\Microsoft.Practices.Unity.Configuration.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.Practices.Unity.RegistrationByConvention, Version=4.0.0.0, Culture=neutral, PublicKeyToken=6d32ff45e0ccc69f, processorArchitecture=MSIL">
-      <HintPath>..\packages\Unity.4.0.1\lib\net45\Microsoft.Practices.Unity.RegistrationByConvention.dll</HintPath>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
-  </ItemGroup>
-  <ItemGroup>
     <Compile Include="Configurations\SchedulerConsoleSettings.cs" />
+    <Compile Include="Dependencies\Configurations\ConsoleAppDependencyConfiguration.cs" />
+    <Compile Include="Dependencies\ConsoleDependencyManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -73,37 +47,35 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Scheduler.Core.Dependencies\Scheduler.Core.Dependencies.csproj">
-      <Project>{a5dba6bf-0d61-451f-8ce2-fe9d27d42d0b}</Project>
+      <Project>{A5DBA6BF-0D61-451F-8CE2-FE9D27D42D0B}</Project>
       <Name>Scheduler.Core.Dependencies</Name>
     </ProjectReference>
     <ProjectReference Include="..\Scheduler.Core\Scheduler.Core.csproj">
-      <Project>{9a991b42-89da-4b3c-8675-0c4e1c7fbacf}</Project>
+      <Project>{9A991B42-89DA-4B3C-8675-0C4E1C7FBACF}</Project>
       <Name>Scheduler.Core</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Scheduler.Domain.Data\Scheduler.Domain.Data.csproj">
-      <Project>{5D366F7C-075D-49FF-A742-78853AA7A6DD}</Project>
-      <Name>Scheduler.Domain.Data</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Scheduler.Engine.Quartz\Scheduler.Engine.Quartz.csproj">
-      <Project>{cd895ce0-d65a-4e96-897b-2c45821112bb}</Project>
-      <Name>Scheduler.Engine.Quartz</Name>
     </ProjectReference>
     <ProjectReference Include="..\Scheduler.Engine\Scheduler.Engine.csproj">
       <Project>{198E6F67-49DC-41A0-A03A-DDC81F3E25CF}</Project>
       <Name>Scheduler.Engine</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Scheduler.Infrastructure\Scheduler.Infrastructure.csproj">
-      <Project>{bb4a8717-fe3f-4989-98f7-c7bbf884503f}</Project>
-      <Name>Scheduler.Infrastructure</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Scheduler.Logging.NLog\Scheduler.Logging.NLog.csproj">
-      <Project>{e333f50a-de6b-4c3d-a686-feef7c7d627f}</Project>
-      <Name>Scheduler.Logging.NLog</Name>
+    <ProjectReference Include="..\Scheduler.Infrastructure.Dependencies\Scheduler.Infrastructure.Dependencies.csproj">
+      <Project>{AA3175F5-9130-4AC2-9AF0-65691533B837}</Project>
+      <Name>Scheduler.Infrastructure.Dependencies</Name>
     </ProjectReference>
     <ProjectReference Include="..\Scheduler.Logging\Scheduler.Logging.csproj">
       <Project>{5132F164-07EA-47F4-9BB6-FD3265927EF6}</Project>
       <Name>Scheduler.Logging</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
+    <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
