--- a/src/Scheduler.Console/packages.config
+++ b/src/Scheduler.Console/packages.config
@@ -3,5 +3,6 @@
   <package id="Common.Logging" version="3.3.1" targetFramework="net46" />
   <package id="Common.Logging.Core" version="3.3.1" targetFramework="net46" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net46" />
+  <package id="EntityFramework" version="6.2.0" targetFramework="net471" />
   <package id="Unity" version="4.0.1" targetFramework="net46" />
 </packages>
